Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19189

forestdb assertion in n1ql throughput CI3 stale=ok test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.1.1
    • 4.1.1
    • forestdb
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      Build : 4.1.1-5912
      Test: n1ql covering index (CI3) throughput stale=ok test
      Found assertion in Indexer.log.
      Assertion in (nil) != 0x7ef31d040150 in /home/couchbase/jenkins/workspace/sherlock-unix/forestdb/src/hbtrie.cc:84
      Hanging process...
      2016-04-13T02:35:30.294-07:00 [Info] ForestDBSlice::Compact No Snapshot Found. Skipped Compaction.Slice Id 0, IndexInstId 12635752743852534503, IndexDefnId 12635752743852534503

      Attachments

        Issue Links

          Activity

            People

              wayne Wayne Siu
              wayne Wayne Siu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty