MB-19189 Commit old file at the last stage of compaction

- If dirty WAL flush happens at the last loop of move delta, then
old file's last header doesn't include the up-to-date root node info.

- It may cause various kinds of failures including hb-trie assertion.

Change-Id: I99967ae4f31dc8b0950f080ae7543f296d3f4b23
Reviewed-on: http://review.couchbase.org/62826
Reviewed-by: Jung-Sang Ahn <jungsang.ahn@gmail.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>