src/forestdb.cc
@@ -5075,6 +5075,7 @@ fdb_status _fdb_compact_file(fdb_kvs_handle *handle,
             if (got_lock) {
                 filemgr_mutex_unlock(handle->file);
             }
+            btreeblk_reset_subblock_info(new_bhandle);
             _fdb_cleanup_compact_err(handle, new_file, true, false,
                                      new_bhandle, new_dhandle, new_trie,
                                      new_seqtrie, new_seqtree);
@@ -5098,8 +5099,6 @@ fdb_status _fdb_compact_file(fdb_kvs_handle *handle,
               _fdb_wal_flush_func, _fdb_wal_get_old_offset, &flush_items);
     btreeblk_end(handle->bhandle);
     wal_release_flushed_items(handle->file, &flush_items);
-    // reset last_wal_flush_hdr_bid
-    handle->last_wal_flush_hdr_bid = BLK_NOT_FOUND;
 
     // copy old file's seqnum to new file (do this again due to delta)
     seqnum = filemgr_get_seqnum(handle->file);
@@ -5112,6 +5111,26 @@ fdb_status _fdb_compact_file(fdb_kvs_handle *handle,
     // migrate uncommitted transactional items to new file
     wal_txn_migration((void*)handle, (void*)new_dhandle,
                       handle->file, new_file, _fdb_doc_move);
+
+    // last commit of the old file
+    // (we must do this due to potential dirty WAL flush
+    //  during the last loop of delta move; new index root node
+    //  should be stored in the DB header).
+    handle->cur_header_revnum = fdb_set_file_header(handle);
+    fs = filemgr_commit(handle->file, &handle->log_callback);
+    if (fs != FDB_RESULT_SUCCESS) {
+        filemgr_set_compaction_state(handle->file, NULL, FILE_NORMAL);
+        filemgr_mutex_unlock(handle->file);
+        filemgr_mutex_unlock(new_file);
+        btreeblk_reset_subblock_info(new_bhandle);
+        _fdb_cleanup_compact_err(handle, new_file, true, false, new_bhandle,
+                                 new_dhandle, new_trie, new_seqtrie,
+                                 new_seqtree);
+        return fs;
+    }
+
+    // reset last_wal_flush_hdr_bid
+    handle->last_wal_flush_hdr_bid = BLK_NOT_FOUND;
 
     old_file = handle->file;
     handle->file = new_file;
